more spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -203,8 +203,9 @@ footer {
     margin-top: var(--spacing120);
     width: 60%;
     padding-top: var(--spacing30);
+    padding-bottom: var(--spacing40);
     background-color: var(--neutral-white);
-    border-radius: var(--spacing10);
+    border-radius: var(--spacing20);
     max-width: 1000px;
   }
 
